@@ -1,3 +1,8 @@
+2006-01-10  Andras Varga
+
+	* platdep/time.h, platdep/socket.h: made it possible to choose between
+	winsock.h and winsock2.h
+
 2005-10-27  Andras Varga
 
 	* csimul.h: setSimTime() added (internal use only!), needed for SystemC
